# cloakencrypt

./: .gitignore  CHANGELOG.md  README.md  icp.yaml
.icp/data/mappings/: ic.ids.json
backend/: Cargo.toml
backend/src/: lib.rs
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/bundler/: package-lock.json  package.json  vite.config.js
frontend/bundler/src/: dfinity-bundle.js
frontend/src/: crypto.ts  icons.ts  main.ts  styles.css
